Fix spacing on accordion list items

--- a/content/_assets/styles/custom.css
+++ b/content/_assets/styles/custom.css
@@ -676,6 +676,14 @@ button.accordion-expander[aria-expanded="true"] .vert {
 .quire-page.vocabulary .quire-page__content .content .accordion li p {
   margin-bottom: .25em;
 }
+@media screen {
+  .quire-page.vocabulary .quire-page__content .content .accordion li::before {
+    margin-top: 5px;
+  }
+  .quire-page.vocabulary #accordion-controls li {
+    margin-left: 1em;
+  }
+}
 
 /*  VISUAL ATLAS PAGE
     type: visual-atlas
